@@ -1,3 +1,11 @@
+2012-11-17  Patrice Dumas  <pertusus@free.fr>
+
+	* configure.ac, Pod-Simple-Texinfo/Makefile.am, doc/tp_api/Makefile.am:
+	new conditionals, BUILD_PERL_API_TEXI and POD_SIMPLE_TEXINFO_TESTS to
+	avoid rebuilding the texinfo files from pod documentnation if 
+	Pod::Simple::PullParser, and avoid running the Pod-Simple-Texinfo tests
+	if Test::More is not present.
+
 2012-11-17  Sergey Poznyakoff  <gray@gnu.org>
 
 	Use the text attribute to represent "image" tag.
